Fixed scroll snap align issues.

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  scroll-snap-align: start;
+  scroll-snap-align: center;
 }
 #leafletMap {
   width: 100%;
